k8s/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mirror
      tier: backend
  template:
    metadata:
      labels:
        app: mirror
        tier: backend
    spec:
      containers:
        - name: mirror
          image: nonbreakingspace/mirror-api:latest
          ports:
            - name: http
              containerPort: 4000
          args: ["foreground"]
          livenessProbe:
            httpGet:
              path: /api/kube_health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
      - name: regcred
