k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-frontend
spec:
  selector:
    matchLabels:
      app: mirror
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: mirror
        tier: frontend
    spec:
      containers:
      - name: mirror
        image: scottyd980/mirror-client:latest
      imagePullSecrets:
      - name: regcred2
