k8s/ws.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-ws
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: mirror
      tier: ws
  template:
    metadata:
      labels:
        app: mirror
        tier: ws
    spec:
      containers:
        - name: mirror
          image: nonbreakingspace/mirror-api:latest
          ports:
            - name: http
              containerPort: 4000
          args: ["foreground"]
          livenessProbe:
            httpGet:
              path: /api/kube_health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
      - name: regcred
