k8s/backend.service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: mirror-api-service
# spec:
#   ports:
#     - port: 8080
#       targetPort: 4000
#       protocol: TCP
#       name: http
#   selector:
#     app: mirror-api
#   type: LoadBalancer

kind: Service
apiVersion: v1
metadata:
  name: mirror
spec:
  selector:
    app: mirror
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
