k8s/frontend.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mirror-frontend
spec:
  selector:
    app: mirror
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
