k8s/ws.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mirror-ws
spec:
  selector:
    app: mirror
    tier: ws
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
