k8s/mirror.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mirror-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # In case we ever go back to real websockets
    # nginx.org/websocket-services: mirror-backend
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.usemirror.io' ) {
        rewrite ^ https://usemirror.io$request_uri permanent;
      }
      if ($host = 'usemirror.com' ) {
        rewrite ^ https://usemirror.io$request_uri permanent;
      }
      if ($host = 'www.usemirror.com' ) {
        rewrite ^ https://usemirror.io$request_uri permanent;
      }
      if ($host = 'www.nonbreakingmonitor.com' ) {
        rewrite ^ https://nonbreakingmonitor.com$request_uri permanent;
      }
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_http_version 1.1;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
      proxy_set_header Host $host;
spec:
  tls:
  - hosts:
    - usemirror.io
    - www.usemirror.io
    - usemirror.com
    - www.usemirror.com
    - nonbreakingmonitor.com
    - www.nonbreakingmonitor.com
    secretName: letsencrypt-prod
  rules:
  - host: usemirror.io
    http:
      paths:
      - path: /
        backend:
          serviceName: mirror-frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: mirror-backend
          servicePort: 80
      - path: /socket
        backend:
          serviceName: mirror-backend
          servicePort: 80
  - host: www.usemirror.io
    http:
      paths:
      - backend:
          serviceName: mirror-frontend
          servicePort: 80
  - host: www.usemirror.com
    http:
      paths:
      - backend:
          serviceName: mirror-frontend
          servicePort: 80
  - host: usemirror.com
    http:
      paths:
      - backend:
          serviceName: mirror-frontend
          servicePort: 80
  - host: nonbreakingmonitor.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  - host: www.nonbreakingmonitor.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
